<resources>
    <string name="app_name">Livraria Scrolls</string>
    <string name="todo">TODO</string>
    <string name="inscreva_se_gratis">Inscreva-se gratis</string>
    <string name="Drawer_open">Open Drawer</string>
    <string name="Drawer_close">Close Drawer</string>
    <string name="GoogleApiMaps">AIzaSyAcboV_O5OQK2KUo_olVBaIa-xtgh4QRMk</string>

    <string name="error_invalid_name">O nome digitado é inválido</string>
    <string name="error_invalid_email">O endereço de e-mail digitado é inválido</string>
    <string name="error_invalid_date">A data informada é inválida</string>
    <string name="error_invalid_password">A senha informada é muito curta</string>


    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">O campo é obrigatório</string>
    <string name="title_activity_splashh">splashh</string>
    <string name="title_activity_editar_perfil">EditarPerfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_settings">Configurações</string>

    <!-- Strings related to fields-->
    <string name="password_field"> Senha</string>
    <string name="name_field"> Nome</string>
    <string name="sign_up_field">Não tem conta? Cadastre-se</string>
    <string name="login_btn"> Continuar</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="address_field">Endereço(Ex:Rua)</string>
    <string name="city_field">Cidade</string>
    <string name="state_field">Estado</string>
    <string name="number_address">Nº</string>
    <string name="complemento">Complemento</string>
    <string name="holder_account">Titular do cartão</string>
    <string name="number_card">Número do cartão</string>
    <string name="expirity_date">Data de validade</string>
    <string name="prod_name">Nome do produto</string>
    <string name="price">Preço</string>
    <string name="category">Categoria</string>
    <string name="language">Idioma</string>
    <string name="vibration">Vibração</string>
    <string name="notification">Notificação</string>
    <string name="configuration">Configuração</string>
    <string name="main_item">Principal</string>
    <string name="maps">Mapa</string>
    <string name="Register_card">Registrar cartão de crédito</string>
    <string name="Register_address">Registrar endereço</string>
    <string name="profile">Perfil</string>
    <string name="rate_us">Avalie-nos</string>
    <string name="My_requests">Meus pedidos</string>
    <string name="think_about">O que achou do livro? Avalie</string>
    <string name="book_author">Autor do livro</string>

    <string name="district">Bairro</string>
    <string-array name="my_books">
        <item>Fantasia</item>
        <item>Horror</item>
        <item>Ficção</item>

        <item>Clássico</item>
        <item>Jogos</item>
        <item>Infantil</item>
    </string-array>

    <!-- Strings related to register -->
    <string name="btn_create_account">Criar conta</string>
    <string name="account_alredy_exists">Já possui uma conta? Clique aqui</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_notification">Notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_activated">Activated</string>
    <string name="pref_deactivated">Deactivated</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_choose_language">Choose a language</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string-array name="list_languages_preferences">
        <item>English</item>
        <item>Español</item>
        <item>Português</item>
    </string-array>
    <string-array name="list_languages_values">
        <item>en</item>
        <item>es</item>
        <item>pt</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_user">EditUser</string>

</resources>
