<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >
        <group android:checkableBehavior="single"

            >
            <item android:id="@+id/itmComprar"
                android:title="@string/main_item"/>
            <item android:id="@+id/itmMeusPedidos"
                android:title="@string/My_requests"/>
            <item android:id="@+id/itmMapa"
                android:title="@string/maps"/>
            <item android:id="@+id/itmQRCam"
                android:title="QR Camera"
                />
            <item android:id="@+id/itmPerfil"
                android:title="@string/profile"/>
            <item android:id="@+id/itmLogoOut"
                android:title="LogOut"/>

        </group>
    <item android:id="@+id/Menu2"
        android:title="">


    </item>
</menu>