<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_field"
            android:textColor="@color/PretoPrincipal"
            android:textSize="26sp"
            android:textAlignment="viewStart"
            android:id="@+id/NomeEndereco"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_address"
            android:textColor="@color/PretoPrincipal"
            android:textSize="26sp"
            android:textAlignment="viewStart"
            android:id="@+id/NumeroEndereço"
            android:layout_marginLeft="20dp"
            />
           </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cep"
            android:textColor="@color/PretoPrincipal"
            android:textSize="26sp"
            android:textAlignment="center"
            android:id="@+id/CepEndereço"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textColor="@color/PretoPrincipal"
                android:textSize="26sp"
                android:textAlignment="viewStart"
                android:id="@+id/BairroEndereço"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/city_field"
                android:textColor="@color/PretoPrincipal"
                android:textSize="26sp"
                android:textAlignment="viewStart"
                android:id="@+id/CidadeEndereço"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UF"
                android:textColor="@color/PretoPrincipal"
                android:textSize="26sp"
                android:textAlignment="viewStart"
                android:id="@+id/UfEndereço"
                android:layout_marginLeft="20dp"
                />/
        </LinearLayout>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/book_true_icon"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/LixoEndereco"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>